# ExplorationCompanyTask

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
docs/: Architecture.drawio
inc/: gnc.h  gnssInterface.h  imuInterface.h  sensorFdir.h  strInterface.h
inputData/: gnssSens.npy  imuSens.npy  imuSens1.npy  imuSens2.npy  scenarioAerocapture.py  strSens.npy
libInc/: config.h  interfaceLib.h  threadLib.h
libSrc/: interfaceLib.c  threadLib.c
src/: gnc.c  sensorFdir.c  sensors.c
